<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp">

    <ImageView
        android:id="@+id/login_iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_iv_logo"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_linear_layout"
        app:layout_constraintStart_toStartOf="@+id/login_linear_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        app:srcCompat="@mipmap/ic_logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/login_bt_signup"
        app:layout_constraintEnd_toEndOf="@+id/login_bt_signup"
        app:layout_constraintStart_toStartOf="@+id/login_bt_signup"
        app:layout_constraintTop_toBottomOf="@+id/login_iv_logo"
        app:layout_constraintVertical_bias="0.55">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_et_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionGroup="true"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius_edit_text"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius_edit_text"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius_edit_text"
            app:boxCornerRadiusTopStart="@dimen/corner_radius_edit_text"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@+id/login_et_password_layout"
            app:layout_constraintEnd_toEndOf="@+id/login_et_password_layout"
            app:layout_constraintStart_toStartOf="@+id/login_et_password_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/login_et_email_hint"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/black"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_et_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionGroup="true"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius_edit_text"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius_edit_text"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius_edit_text"
            app:boxCornerRadiusTopStart="@dimen/corner_radius_edit_text"
            app:layout_constraintBottom_toTopOf="@+id/login_cb_remember"
            app:layout_constraintEnd_toEndOf="@+id/login_cb_remember"
            app:layout_constraintStart_toStartOf="@+id/login_cb_remember"
            app:layout_constraintTop_toBottomOf="@+id/login_et_email_layout"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/login_et_password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="@string/max_length_password"
                android:minHeight="48dp"
                android:textColor="@color/black"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/login_cb_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login_cb_remember"
            android:textColor="@color/dark_gray"
            app:layout_constraintBottom_toTopOf="@+id/login_bt_login"
            app:layout_constraintEnd_toEndOf="@+id/login_bt_login"
            app:layout_constraintStart_toStartOf="@+id/login_bt_login"
            app:layout_constraintTop_toBottomOf="@+id/login_et_password_layout" />

        <TextView
            android:id="@+id/login_tv_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tv_forgot_pass"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/login_cb_remember"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_et_password_layout"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/login_bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/bt_login"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_cb_remember" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/login_tv_not_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/login_tv_registered"
        app:layout_constraintBottom_toTopOf="@+id/login_bt_signup"
        app:layout_constraintEnd_toEndOf="@+id/login_bt_signup"
        app:layout_constraintStart_toStartOf="@+id/login_bt_signup"
        app:layout_constraintTop_toBottomOf="@+id/login_linear_layout"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/login_bt_signup"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/bt_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_tv_not_registered" />

</androidx.constraintlayout.widget.ConstraintLayout>